--- a/locale/es/LC_MESSAGES/messages.po
+++ b/locale/es/LC_MESSAGES/messages.po
@@ -3,12 +3,13 @@
 # This file is distributed under the same license as the PROJECT project.
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2017.
 #
+#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2017-05-05 20:18-0300\n"
-"PO-Revision-Date: 2017-05-05 20:03-0300\n"
+"POT-Creation-Date: 2017-05-08 13:02-0300\n"
+"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: es\n"
 "Language-Team: es <LL@li.org>\n"
@@ -18,6 +19,45 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.4.0\n"
 
+#: templates/index.html:22
+msgid "English"
+msgstr "Inglés"
+
+#: templates/index.html:23
+msgid "Spanish"
+msgstr "Español"
+
 #: templates/index.html:28
 msgid "Stories to learn Python stuff."
-msgstr "Historias para aprender cosas de Python."
+msgstr "Talleres para aprender Python."
+
+#: templates/index.html:31
+#, python-format
+msgid "Inspired by %(nodeschool_link)s"
+msgstr "Inspirado por %(nodeschool_link)s"
+
+#: templates/index.html:41
+msgid "Sample story (fork or copy to create your own story)."
+msgstr "Taller de muestra (forkear o copiar para crear uno propio)."
+
+#: templates/index.html:46
+msgid "A Pyschool story for learning python essentials."
+msgstr "Una historia de Pyschool para aprender los conceptos esenciales de Python."
+
+#: templates/index.html:51
+msgid "Workshop for learning regular expressions using the commandline."
+msgstr ""
+"Taller para aprender expresiones regulares usando la línea de comando. "
+"Disponible en Inglés solamente"
+
+#: templates/index.html:55
+msgid "Learn Django [work in progress]."
+msgstr "Aprende Django [trabajo en progreso]."
+
+#: templates/index.html:63
+msgid "Contribute"
+msgstr "Contribuye"
+
+#: templates/index.html:65
+msgid "Organize"
+msgstr "Organiza"
