Added Contributing section and Spanish translations

--- a/locale/pyschool.pot
+++ b/locale/pyschool.pot
@@ -1,9 +1,28 @@
+# Translations template for PROJECT.
+# Copyright (C) 2017 ORGANIZATION
+# This file is distributed under the same license as the PROJECT project.
+# FIRST AUTHOR <EMAIL@ADDRESS>, 2017.
+#
+#, fuzzy
+msgid ""
+msgstr ""
+"Project-Id-Version: PROJECT VERSION\n"
+"Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
+"POT-Creation-Date: 2017-05-08 17:07-0300\n"
+"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"Language-Team: LANGUAGE <LL@li.org>\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=utf-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"Generated-By: Babel 2.4.0\n"
+
 #: templates/index.html:22
-msgid "English"
+msgid "[English]"
 msgstr ""
 
 #: templates/index.html:23
-msgid "Spanish"
+msgid "[Spanish]"
 msgstr ""
 
 #: templates/index.html:28
@@ -27,11 +46,151 @@ msgstr ""
 msgid "Workshop for learning regular expressions using the commandline."
 msgstr ""
 
-#: templates/index.html:58
+#: templates/index.html:57 templates/index.html:143
 msgid "Contribute"
 msgstr ""
 
+#: templates/index.html:58
+msgid ""
+"The only way to learn a new programming language is by writing programs "
+"in it."
+msgstr ""
+
 #: templates/index.html:60
+msgid ""
+"Pyschool could always use more stories, whether as specific python "
+"features, existing libraries, programming concepts, or even programming "
+"concepts not specific to Python itself like event handling, threading and"
+" such. New stories\n"
+"          \tare always welcome :)"
+msgstr ""
+
+#: templates/index.html:68
+msgid "Get Started!"
+msgstr ""
+
+#: templates/index.html:70
+#, python-format
+msgid ""
+"Ready to write your story? Here's how to set up a story for local "
+"development. All stories derive from the base %(story_link)s library."
+msgstr ""
+
+#: templates/index.html:74
+#, python-format
+msgid ""
+"Fork/clone/copy the %(hipyschool_link)s or the %(hipy101_link)s repo on "
+"Github. Those a good examples of simple stories to begin with."
+msgstr ""
+
+#: templates/index.html:81
+msgid ""
+"Install your local copy into a virtualenv. Assuming you have "
+"virtualenvwrapper installed, this is how you could set up your copy for "
+"local development:"
+msgstr ""
+
+#: templates/index.html:87
+msgid ""
+"Create a module for your <em>Story</em>. For example "
+"<code>mystory/__init__.py</code>."
+msgstr ""
+
+#: templates/index.html:88
+msgid ""
+"Define the <code>name</code>, <code>title</code> and "
+"<code>adventures</code> variables."
+msgstr ""
+
+#: templates/index.html:89
+msgid ""
+"You will have to use the <code>gettext()</code> function from "
+"<code>story.translation</code> to receive translations. More on that "
+"below."
+msgstr ""
+
+#: templates/index.html:92
+msgid ""
+"Create one or more <em>Adventures</em>. A story is a collection of one or"
+" more adventures"
+msgstr ""
+
+#: templates/index.html:94
+msgid ""
+"Create a module for your adventure for example "
+"<code>mystory/myfirstadventure</code>"
+msgstr ""
+
+#: templates/index.html:95
+msgid ""
+"Create the <code>README.rst</code> file describing your adventure in the "
+"previous folder"
+msgstr ""
+
+#: templates/index.html:96
+msgid ""
+"(Optional) Make an Spanish translation. You must name it "
+"<code>README.es.rst</code>"
+msgstr ""
+
+#: templates/index.html:97
+#, python-format
+msgid ""
+"In the <code>__init__.py</code> file define a class called "
+"<code>Adventure</code>, that derives from %(baseadventure_link)s."
+msgstr ""
+
+#: templates/index.html:103
+#, python-format
+msgid ""
+"Since the <code>gettext()</code> function relies on %(pybabel_link)s, so "
+"you will have to initialize the translation by running:"
+msgstr ""
+
+#: templates/index.html:108
+msgid ""
+"You should see several files for each language in "
+"<code>mystory/locale/</code> corresponding for the usages of the "
+"<code>gettext()</code> function."
+msgstr ""
+
+#: templates/index.html:109
+msgid "If the command fail, try again."
+msgstr ""
+
+#: templates/index.html:113
+msgid "(Optional) Modify and add translations in the locale files and then run:"
+msgstr ""
+
+#: templates/index.html:117
+msgid ""
+"It is recommended to create some unit tests for checking your solutions, "
+"check that your changes pass flake8, tox, and the unit tests:"
+msgstr ""
+
+#: templates/index.html:122
+msgid "To get flake8 and tox, just pip install them into your virtualenv."
+msgstr ""
+
+#: templates/index.html:125
+msgid "Commit your changes and push your branch to GitHub:"
+msgstr ""
+
+#: templates/index.html:131
+#, python-format
+msgid ""
+"%(publish_link_prefix)s Publish</a> your package in pip, so it is "
+"available publicly "
+msgstr ""
+
+#: templates/index.html:134
+#, python-format
+msgid ""
+"%(letusknow_link_prefix)s Let us know</a> or submit a pull request to the"
+" Pyschool GitHub website to update our website to include your story."
+msgstr ""
+
+#: templates/index.html:145
 msgid "Organize"
 msgstr ""
 
