Add spanish translations

--- a/locale/pyschool.pot
+++ b/locale/pyschool.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2017-05-08 19:21-0300\n"
+"POT-Creation-Date: 2017-05-08 20:03-0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -205,7 +205,7 @@ msgstr ""
 msgid ""
 "PySchool is a fully community driven effort and is 100% open source. This"
 " means that anyone can use the PySchool materials and/or host an event. "
-"There's a lot of flexibility in the specifics of running a NodeSchool "
+"There's a lot of flexibility in the specifics of running a PySchool "
 "event. The only expectations for event hosts is that events be not-for-"
 "profit (free or low cost) and that governance of events should have an "
 "open membership model."
