--- a/locale/es/LC_MESSAGES/messages.po
+++ b/locale/es/LC_MESSAGES/messages.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2017-05-08 19:21-0300\n"
+"POT-Creation-Date: 2017-05-08 20:03-0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: es\n"
@@ -244,17 +244,26 @@ msgid ""
 "Education is for improving the lives of others and for leaving your "
 "community and world better than you found it"
 msgstr ""
+"La educación es para mejorar las vidas de otros y para dejar tu comunidad"
+" en un mejor estado de la que la encontraste"
 
 #: templates/index.html:151
 #, python-format
 msgid ""
 "PySchool is a fully community driven effort and is 100% open source. This"
 " means that anyone can use the PySchool materials and/or host an event. "
-"There's a lot of flexibility in the specifics of running a NodeSchool "
+"There's a lot of flexibility in the specifics of running a PySchool "
 "event. The only expectations for event hosts is that events be not-for-"
 "profit (free or low cost) and that governance of events should have an "
 "open membership model."
 msgstr ""
+"Pyschool es un efuerzo totalmente llevado a cabo por la comunidad y es "
+"100% open source. Esto quiere decir que cuaquier persona puede usar "
+"material de Pyschool, u organizar un evento. Esto da un montón "
+"de flexibilidad a la hora de ser anfritrión un evento de Pyschool. "
+"La único que se espera de los anfitriones es que los eventos no sean con "
+"fines de lucro, y que el modelo de membrecía para participar en ellos sea "
+"abierto."
 
 #: templates/index.html:153
 #, python-format
@@ -263,26 +272,7 @@ msgid ""
 "our %(pyschool_link)s discussion group. Don't hesitate to send us an "
 "%(email_link)s if you can't find the answer you're looking for."
 msgstr ""
-
-#~ msgid ""
-#~ "PySchool is a fully community driven "
-#~ "effort and is 100% open source. "
-#~ "This means that anyone can use the"
-#~ " PySchool materials and/or host an "
-#~ "event. The only expectations for event"
-#~ " hosts is that events be not-"
-#~ "for-profit (free or low cost) and "
-#~ "that governance of events should have"
-#~ " an open membership model."
-#~ msgstr ""
-
-#~ msgid ""
-#~ "Pyschool could always use more stories,"
-#~ " whether as specific python features, "
-#~ "existing libraries, programming concepts, or"
-#~ " even programming concepts not specific "
-#~ "to Python itself like event handling,"
-#~ " threading and such. New stories\n"
-#~ "           are always welcome :)"
-#~ msgstr ""
-
+"Para preguntar y contestar preguntas acerca de la autoría de contenido "
+"para Pyschool, visita nuestro grupo de discusión de %(pyschool_link)s. No"
+" dudes en mandar un %(email_link)s si no encuentras la respuesta para lo "
+"que buscas."
